# umjunsik-lang

./: .all-contributorsrc  99bears.umm  LICENSE  Makefile  README.md  gugudan.umm  readme.md  setup.py  string_test.umm  test.umm
examples/: 99bears.umm  Fibonacci_Numbers.umm  addition_calculator.umm  evenodd.umm  factorial_calculator.umm  gugudan.umm  helloworld.umm  jot.umm  pyramid.umm  sqrt.umm  string_test.umm  tree.umm
src/: file.h  parse.c  parse.h  string.h
umjunsik-lang-antlr/: umjunsik-lang.g4
umjunsik-lang-cc/: .gitignore  Makefile  build.cmd  clean.cmd
umjunsik-lang-cc/src/: file.c  info.h  main.c  parse.c  string.c  ummc.c
umjunsik-lang-csharp/: .gitignore  Program.cs  UpgradeLog.htm  umjunsik-lang-csharp.csproj  umjunsik-lang-csharp.sln
umjunsik-lang-csharp/Backup/: umjunsik-lang-csharp.sln
umjunsik-lang-deno/: index.ts  readme.md
umjunsik-lang-go/: go.mod  main.go
umjunsik-lang-go/ast/: ast.go
umjunsik-lang-go/eval/: eval.go  util.go
umjunsik-lang-go/lexer/: lexer.go
umjunsik-lang-go/object/: object.go
umjunsik-lang-java/: main.java
umjunsik-lang-kotlin/: build.gradle.kts  settings.gradle.kts
umjunsik-lang-node/: package.json  tsconfig.json
umjunsik-lang-python/: __init__.py  __main__.py  runtime.py  setup.py
umjunsik-lang-rust/: Cargo.toml  README.md
umjunsik-lang-rust/compiler/: Cargo.toml
umjunsik-lang-rust/compiler/src/: main.rs
umjunsik-lang-swift/: Package.swift
umjunsik-lang-vba/: Module1.vb  README.md  Sheet1.vb  ThisWorkbook.vb  interpreter.xlsm
umjunsik-lang-web/: index.html
(+25 files in other folders)
