[package]
name = "rummc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
guess_host_triple = "0.1.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = [
    "llvm10-0",
] }
umjunsik = { version = "0.1.0", path = "../lib" }
